--- a/site/views/map.pug
+++ b/site/views/map.pug
@@ -1,26 +1,11 @@
 section.component#component-map
-  #map
+  #map.map
   script.
     /**
-    * Leaflet Mapbox
+    * Leaflet Map
     */
-    mapboxgl.accessToken = 'pk.eyJ1IjoiZ3Jvc2NoZW5yb21hbiIsImEiOiJjampuYjZvMDUxOHRpM3FvMWZ6cTRreGVjIn0.EpyQov5DhmqQmrskmic2uQ';
-
-    // Create map
-    const center = [13.429, 52.494]; // Umspannwerk Kreuzberg
-    let map = new mapboxgl.Map({
-        container: 'map',
-        style: 'mapbox://styles/mapbox/dark-v9',
-        zoom: 16,
-        center,
-        scrollZoom: false,
-        NavigationControl: false
-    });
-    // Add zoom and rotation controls to the map.
-    map.addControl(new mapboxgl.NavigationControl(), 'top-left');
-    map.scrollZoom.disable();
-
     // Create markers and geodata
+    const mapCenter = [13.429, 52.494]; // Umspannwerk Kreuzberg
     const siteData = !{JSON.stringify(sites)};
     const features = siteData.map(site => {
       return {
@@ -31,7 +16,7 @@ section.component#component-map
             <a href="${site.href}" title="${site.name}" target="_blank">
               <h3>${site.name}</h3>
             </a>
-            <p>${site.address || ''}</p>
+            <p>${site.address || ''}</p>
           `
         },
         "geometry": {
@@ -40,32 +25,19 @@ section.component#component-map
         }
       }
     });
-    const geojson = {
+    const geojsonObject = {
       "type": "FeatureCollection",
       "features": features
     };
-
-    // Assemble map and add layer with markers
-    map.on('load', () => {
-      map.addLayer({
-        "id": "markers",
-        "type": "symbol",
-        "source": {
-          "type": "geojson",
-          "data": geojson
-        }
-      });
-
-      // Add Markers with Popups to map
-      // @link https://www.mapbox.com/help/custom-markers-gl-js/#attach-popups-to-markers
-      geojson.features.forEach((feature) => {
-        new mapboxgl.Marker({
-          color: "#1779ba" // primary color from Foundation settings
+    const map = new ol.Map({
+      target: 'map',
+      layers: [
+        new ol.layer.Tile({
+          source: new ol.source.OSM()
         })
-          .setLngLat(feature.geometry.coordinates)
-          .setPopup(new mapboxgl.Popup({ offset: 25 }) // add popups
-            .setHTML(feature.properties.description)
-          )
-          .addTo(map);
-      });
-    }); // /on.load()
+      ],
+      view: new ol.View({
+        center: ol.proj.fromLonLat(mapCenter),
+        zoom: 17,
+      })
+    });
