--- a/site/views/webapp.pug
+++ b/site/views/webapp.pug
@@ -7,14 +7,19 @@ html(lang='de')
       name='viewport'
       content='width=device-width, initial-scale=1')
     title=`KrGoTrEx`
+
     // Stylesheets
     link(
-      href='https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.css'
-      rel='stylesheet')
-    link(rel='stylesheet', href='/assets/style.css')
+      rel='stylesheet',
+      href='https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css')
+    link(
+      rel='stylesheet',
+      href='/assets/style.css')
 
     // Scripts
-    script(src='https://api.mapbox.com/mapbox-gl-js/v0.46.0/mapbox-gl.js')
+    script(src='https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js')
+    script(src='https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList')
+
   body
     include header
     include tabs
@@ -27,6 +32,8 @@ html(lang='de')
       include replacements
 
     include footer
+
     // Scripts
     script(src='https://code.jquery.com/jquery-3.3.1.min.js')
     script(data-main='/js/main', src='/js/require.js')
+
