Add search form to search site

--- a/site/styles/content/_sites.scss
+++ b/site/styles/content/_sites.scss
@@ -11,11 +11,28 @@
     width: 33%;
   }
 
+  .form-search-sites {
+    margin-top: $global-margin / 2;
+
+    .input-group {
+      &-field {
+        background-color: $darkturquoise-color;
+        border: none;
+        color: $medium-gray;
+      }
+      &-button {
+        button {
+          background-color: $dark-gray;
+        }
+      }
+    }
+
+  }
+
   .site {
     &-titles {
       box-shadow: 0 2px 3px rgba($black, 0.6);
       padding-top: $global-padding;
-      padding-bottom: $global-padding;
       position: relative;
 
       h6 {
