--- a/site/views/sites.pug
+++ b/site/views/sites.pug
@@ -1,4 +1,3 @@
-include mixins/_sitesSearchForm
 block sites
   aside#sites
     .row.align-middle.site-titles
@@ -7,7 +6,22 @@ block sites
       .small-6.column
         h6 #{i18n.__("sitesListResultsTitle")}
       .small-12.column
-        +sitesSearchForm(sites)
+        input(
+          id="search-sites-input"
+          type="text"
+          placeholder!=i18n.__('formSearchSitesPlaceholder')
+        )
+        script.
+          const searchInput = document.getElementById('search-sites-input'),
+                sitesArray = !{JSON.stringify(sites)};
+
+          if (searchInput) {
+            searchInput.addEventListener('keyup', (e) => {
+              const resultSite = sitesArray.search(e.target.value) > -1;
+              console.log(resultSite);
+              return resultSite;
+            });
+          }
     ul.row.align-center.align-middle.site-results-list
       for site in sites
         // Map each site with its corresponding results
