--- a/site/views/webapp.pug
+++ b/site/views/webapp.pug
@@ -17,6 +17,7 @@ html(lang='de')
       href='/assets/style.css')
 
     // Scripts
+    script(src='/js/lunr.js')
     script(src='https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js')
     script(src='https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList')
 
@@ -35,5 +36,5 @@ html(lang='de')
 
     // Scripts
     script(src='https://code.jquery.com/jquery-3.3.1.min.js')
-    script(data-main='/js/main', src='/js/require.js')
+    // script(data-main='/js/main', src='/js/require.js')
 
