--- a/site/styles/_globals.scss
+++ b/site/styles/_globals.scss
@@ -1,7 +1,7 @@
 // Global styles that are NOT already defined in the _settings.scss file go here
 
 body {
-  background-image: url('assets/img/lashes-dark.png');
+  background-image: url('img/lashes-dark.png');
   background-attachment: fixed;
 }
 
