Enable checking custom sites

--- a/site/styles/style.scss
+++ b/site/styles/style.scss
@@ -29,5 +29,6 @@
   "content/hero",
   "content/map-sites",
   "content/map",
-  "content/sites"
+  "content/sites",
+  "content/check-your-site"
 ;
