--- a/site/views/checkYourSite.pug
+++ b/site/views/checkYourSite.pug
@@ -3,4 +3,9 @@ section.component#component-check
   .row
     .small-12.medium-12.large-12.column.text-center
       +siteCheckForm()
+  .row
+    .small-12.column
+      #check-site-loader
+        p SEARCHING...
+      #check-site-result
 
