--- a/site/views/webapp.pug
+++ b/site/views/webapp.pug
@@ -17,9 +17,13 @@ html(lang='de')
       href='/assets/style.css')
 
     // Scripts
-    script(src='/js/lunr.js')
     script(src='https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js')
     script(src='https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList')
+    script(src='https://code.jquery.com/jquery-3.3.1.min.js')
+    script(data-main='/js/main', src='/js/require.js')
+    //- script(src='/js/lunr.js')
+
+
 
   body
     include header
@@ -33,8 +37,3 @@ html(lang='de')
       include replacements
 
     include footer
-
-    // Scripts
-    script(src='https://code.jquery.com/jquery-3.3.1.min.js')
-    // script(data-main='/js/main', src='/js/require.js')
-
