--- a/site/views/replacements.pug
+++ b/site/views/replacements.pug
@@ -1,5 +1,4 @@
 section.component#component-replacement
   .row.align-center.align-middle
     .small-12.column
-      foo foo
-      h2 use pmwik
+      include generated/Fonts
