--- a/site/views/mixins/_siteCheckForm.pug
+++ b/site/views/mixins/_siteCheckForm.pug
@@ -1,26 +1,25 @@
 mixin siteCheckForm(site = {})
   form(
     action=""
-    method=""
     class="row align-center"
     id="form-check-site"
-    novalidate
+    onsubmit="checkSite(event)"
   )
-  fieldset(class="column")
-    h3 #{i18n.__("formSiteCheckTitle")}
-    .input-group
-      input(
-        id="form-check-site-input"
-        type="url"
-        name="site"
-        class="input-group-field"
-        placeholder!=i18n.__('formSiteCheckPlaceholder')
-        tabindex="1"
-        autofocus
-      )
-      .input-group-button
-        button(
-          type="submit"
-          id="hero-cta"
-          class="button"
-        ) #{i18n.__("formSiteCheckButtonText")}
+    fieldset(class="column")
+      h3 #{i18n.__("formSiteCheckTitle")}
+      .input-group
+        input(
+          id="form-check-site-input"
+          type="text"
+          name="site"
+          class="input-group-field"
+          placeholder!=i18n.__('formSiteCheckPlaceholder')
+          tabindex="1"
+          autofocus
+        )
+        .input-group-button
+          button(
+            type="submit"
+            id="hero-cta"
+            class="button"
+          ) #{i18n.__("formSiteCheckButtonText")}
