Disable site check form while checking

--- a/site/views/mixins/_siteCheckForm.pug
+++ b/site/views/mixins/_siteCheckForm.pug
@@ -20,6 +20,6 @@ mixin siteCheckForm(site = {})
         .input-group-button
           button(
             type="submit"
-            id="hero-cta"
+            id="form-check-site-btn"
             class="button"
           ) #{i18n.__("formSiteCheckButtonText")}
