--- a/site/views/sites.pug
+++ b/site/views/sites.pug
@@ -28,7 +28,7 @@ block sites
                   ul.site-googles
                     each val, index in result.googles
                       li.row.align-middle.alert
-                        small-8.large-10.column= index
+                        .small-8.large-10.column= index
                         .small-4.large-2.column= val
                     else
                       li.row
