--- a/site/views/map.pug
+++ b/site/views/map.pug
@@ -26,10 +26,9 @@ section.component#component-map
       }
     });
 
-    const image = new ol.style.Circle({
-      radius: 5,
-      fill: null,
-      stroke: new ol.style.Stroke({color: "red", width: 1})
+    const image = new ol.style.Icon({
+      anchor: [0.5, 1],
+      src: '/assets/img/fist-pin.png'
     });
 
     const styles = {
@@ -47,8 +46,13 @@ section.component#component-map
     };
 
     const vectorSource = new ol.source.Vector({
-      features: (new ol.format.GeoJSON()).readFeatures(geojsonObject)
+      features: (new ol.format.GeoJSON()).readFeatures(geojsonObject, {
+        featureProjection: "EPSG:3857"
+      })
     });
+
+
+    //- vectorSource.addFeature(new ol.Feature(new ol.style.Circle([5e6, 7e6], 1e6)));
 
     const vectorLayer = new ol.layer.Vector({
       source: vectorSource,
@@ -56,13 +60,13 @@ section.component#component-map
     });
 
     const map = new ol.Map({
-      target: "map",
       layers: [
         new ol.layer.Tile({
           source: new ol.source.OSM()
         }),
         vectorLayer
       ],
+      target: "map",
       view: new ol.View({
         center: ol.proj.fromLonLat(mapCenter),
         zoom: 17,
@@ -74,7 +78,6 @@ section.component#component-map
      */
     const waitForMap = setInterval(function() {
       if ($('.ol-viewport').length) {
-          console.log("Exists!");
           window.dispatchEvent(new Event('resize'));
           clearInterval(waitForMap);
       }
