imported first batch of texts

--- a/site/views/header.pug
+++ b/site/views/header.pug
@@ -3,7 +3,7 @@ header#main-header
     .small-12.medium-8.large-6.column
       a.header-logo.header-link(
         href="/",
-        title='Kreuzberg Google Tracking Exposed') KrGoTrEx
+        title='Kreuzberg Google Tracking Exposed') kreuzberg.google.tracking.exposed
     .small-12.medium-4.large-6.column
       .row.header-menu
         a#header-link-de.small-2.medium-3.large-1.column.small-order-1.medium-order-2.header-link.header-link-lang(href="/de") De
