--- a/site/views/replacements.pug
+++ b/site/views/replacements.pug
@@ -1,4 +1,5 @@
 section.component#component-replacement
   .row.align-center.align-middle
     .small-12.column
-      include generated/Fonts
+      .replacement
+        include generated/Fonts
