--- a/site/views/tabs.pug
+++ b/site/views/tabs.pug
@@ -1,9 +1,13 @@
 .row
   .column 
-     a(data-route="about" href="about") about
+     a(data-route="kreuzberg" href="kreuzberg") Kreuzberg?
+  .column 
+     a(data-route="campaign" href="campaign") the Campaign
   .column 
      a(data-route="map" href="map") map
   .column 
      a(data-route="check" href="check") check your site
   .column 
      a(data-route="replacement" href="replacements") replacements
+  .column 
+     a(data-route="about" href="about") about us
