--- a/site/views/check.pug
+++ b/site/views/check.pug
@@ -8,4 +8,19 @@ section.component#component-check
       #check-site-loader
         p SEARCHING...
       #check-site-result
+      .propaganda
+        h3 What is tested here?
+        p It show which are the invisible trackers present on a website. Google is the most frequent owner of these trackers, as confirmation of their influence in the technology development.
+        p When you decide to open a website, you feel you are connecting to ONE site, but behind the scene, the connections are many, and they terminate in different companies and countries, this is how trackers work.
+        The website you are connecting has enabled the companies behind; sometimes they are aware, like, when they profit from advertising. In other cases, they might not be aware of it.
+        h3 What does it do?
+        p It just connects to a website, once, and study which are the invisible connections established by the device. It analyzes the traces and tries to associate these activities to known companies so that you can give a name and a face behind these activities.
+        h3 How can i use it?
+        p You can type a website address in the area above, or use tools in your browser which tell you (and maybe even block for you) these web trackers, we suggest: 
+          a(href="https://www.ublock.org/") ublock
+          |.
+        h3 What does it aim to achieve?
+        p Most of the website owner is not aware that google is infiltrating their website. There is a big difference between your site being in the google search engine, and when a google service got snaked into your website. Sadly, both of the things are invisible to non technologies. The goal of this test is to help people in getting google free (if they can, or at least, make them aware of the problem)
+
+
 
