Make navigation a part of the header

--- a/site/views/tabs.pug
+++ b/site/views/tabs.pug
@@ -1,13 +1,13 @@
-.row
-  .column 
-     a(data-route="kreuzberg" href="kreuzberg") Kreuzberg?
-  .column 
-     a(data-route="campaign" href="campaign") the Campaign
-  .column 
-     a(data-route="map" href="map") map
-  .column 
-     a(data-route="check" href="check") check your site
-  .column 
-     a(data-route="replacement" href="replacements") replacements
-  .column 
-     a(data-route="about" href="about") about us
+nav.row.align-center.menu-main
+  .column.text-center
+    a(data-route="kreuzberg" href="kreuzberg" class="header-link") Kreuzberg?
+  .column.text-center
+    a(data-route="campaign" href="campaign" class="header-link") the Campaign
+  .column.text-center
+    a(data-route="map" href="map" class="header-link") map
+  .column.text-center
+    a(data-route="check" href="check" class="header-link") check your site
+  .column.text-center
+    a(data-route="replacement" href="replacements" class="header-link") replacements
+  .column.text-center
+    a(data-route="about" href="about" class="header-link") about us
