--- a/site/views/header.pug
+++ b/site/views/header.pug
@@ -1,10 +1,11 @@
 header#main-header
-  nav.row.align-center
+  .row.align-center
     .small-12.medium-8.large-6.column
       a.header-logo.header-link(
         href="/",
         title='Kreuzberg Google Tracking Exposed') kreuzberg.google.tracking.exposed
     .small-12.medium-4.large-6.column
-      .row.header-menu
+      .row.menu-lang
         a#header-link-de.small-2.medium-3.large-1.column.small-order-1.medium-order-2.header-link.header-link-lang(href="/de") De
         a#header-link-en.small-2.medium-3.large-1.column.small-order-1.medium-order-3.header-link.header-link-lang(href="/en") En
+  include tabs
