--- a/site/styles/_footer.scss
+++ b/site/styles/_footer.scss
@@ -1,7 +1,7 @@
 footer {
   background-color: $darkturquoise-color;
-  padding-top: $global-padding / 2;
-  padding-bottom: $global-padding / 2;
+  padding-top: $global-padding;
+  padding-bottom: $global-padding;
   position: relative;
   bottom: 0;
 }
