Improve and i18n search result messages

--- a/site/styles/forms/_buttons.scss
+++ b/site/styles/forms/_buttons.scss
@@ -10,4 +10,11 @@ button,
   &:hover {
     color: $white;
   }
+
+  &:disabled,
+  &[disabled]
+  &:disabled:hover,
+  &[disabled]:hover {
+    background-color: $medium-gray;
+  }
 }
