--- a/site/views/mixins/_siteCheckForm.pug
+++ b/site/views/mixins/_siteCheckForm.pug
@@ -26,5 +26,5 @@ mixin siteCheckForm(site = {})
   .row.align-center
     .column
       #check-site-loader
-        p SEARCHING...
+        p Testing...
       #check-site-result
