--- a/site/views/replacements.pug
+++ b/site/views/replacements.pug
@@ -1,5 +1,5 @@
-section.component#component-replacement
+section.component#component-replacements
   .row.align-center.align-middle
     .small-12.column
-      .replacement
+      .replacements
         include generated/Fonts
