--- a/site/views/tabs.pug
+++ b/site/views/tabs.pug
@@ -8,6 +8,6 @@ nav.row.align-center.menu-main
   .column.text-center
     a(data-route="check" href="check" class="header-link") check your site
   .column.text-center
-    a(data-route="replacement" href="replacements" class="header-link") replacements
+    a(data-route="replacements" href="replacements" class="header-link") replacements
   .column.text-center
     a(data-route="about" href="about" class="header-link") about us
