--- a/site/views/map.pug
+++ b/site/views/map.pug
@@ -71,14 +71,15 @@ section.component#component-map
       view: new ol.View({
         center: ol.proj.fromLonLat(mapCenter),
         zoom: 17,
-      })
+      }),
+      interactions: ol.interaction.defaults({mouseWheelZoom:false})
     });
 
     /**
      * Hack to force rendering of map tiles
      */
     const waitForMap = setInterval(function() {
-      if ($('.ol-viewport').length) {
+      if ($('div.ol-viewport').length) {
           window.dispatchEvent(new Event('resize'));
           console.log("hack resize trigger now");
           clearInterval(waitForMap);
