Minor tags display adjustment

--- a/site/styles/_globals.scss
+++ b/site/styles/_globals.scss
@@ -104,7 +104,8 @@ a {
   border-radius: 500px;
   color: $medium-gray;
   display: inline-block;
-  font-size: 60%;
+  font-size: 50%;
+  letter-spacing: 1px;
   padding: 2px 8px;
   text-transform: uppercase;
   word-break: keep-all;
