updated texts as per issue #24

--- a/site/views/check.pug
+++ b/site/views/check.pug
@@ -5,15 +5,21 @@ section.component#component-check
       +siteCheckForm()
   .row.align-center
     .small-12.medium-10.large-8.column.propaganda
-      h3 What is tested here?
-      p It show which are the invisible trackers present on a website. Google is the most frequent owner of these trackers, as confirmation of their influence in the technology development.
-      p When you decide to open a website, you feel you are connecting to ONE site, but behind the scene, the connections are many, and they terminate in different companies and countries, this is how trackers work.
-      The website you are connecting has enabled the companies behind; sometimes they are aware, like, when they profit from advertising. In other cases, they might not be aware of it.
-      h3 What does it do?
-      p It just connects to a website, once, and study which are the invisible connections established by the device. It analyzes the traces and tries to associate these activities to known companies so that you can give a name and a face behind these activities.
-      h3 How can i use it?
-      p You can type a website address in the area above, or use tools in your browser which tell you (and maybe even block for you) these web trackers, we suggest: 
+
+      h3 What is Google Tracking Exposed?
+      p TREX is a tool for detecting invisible trackers present on a website. When you open a website, you feel you are connecting to ONE site, but behind the scenes the connections are many, and they terminate in different companies and countries, this is how trackers work. The websites you connect to often enable companies to gather data about you. Sometimes this is being done intentionally, like when they profit from advertising, but sometimes you have no clue you are being tracked. Google is the most frequent owner of these trackers, as confirmation of their influence in the technology development.
+
+      h3 What does it aim to achieve?
+      p Most website owners are not aware that Google is infiltrating their website. There is a big difference between your site being in the google search engine, and when a google service got sneaked into your website. Sadly, both of the things are invisible to non technologies. The goal of this test is to help people in getting google free (if they can, or at least, make them aware of the problem)
+
+      h3 What does TREX do?
+      p It connects to the website you enter and analyses the invisible connections established by the device. It analyzes the traces and tries to associate these activities to known companies so that you can give a name and a face behind these activities.
+
+      h3 How do I use TREX?
+      p Type a website address into the area above, hit enter and see…
+
+      h3 What more can I do?
+      p Use tools in your browser which tell you (and maybe even block for you) these web trackers, we suggest: 
         a(href="https://www.ublock.org/") ublock
         |.
-      h3 What does it aim to achieve?
-      p Most of the website owner is not aware that google is infiltrating their website. There is a big difference between your site being in the google search engine, and when a google service got snaked into your website. Sadly, both of the things are invisible to non technologies. The goal of this test is to help people in getting google free (if they can, or at least, make them aware of the problem)
+
