Enable highlighting site on marker click in map

--- a/site/styles/content/_sites.scss
+++ b/site/styles/content/_sites.scss
@@ -74,6 +74,10 @@
           position: absolute;
           left: -9999px;
         }
+
+        &.selected {
+          background-color: $darkturquoise-color;
+        }
       }
     }
 
