--- a/site/views/map.pug
+++ b/site/views/map.pug
@@ -1,5 +1,8 @@
 section.component#component-map
   #map.map
+  #popup.ol-popup
+    a(href="#", id="popup-closer", class="ol-popup-closer")
+    #popup-content
   script.
     /**
     * Leaflet Map
@@ -20,6 +23,7 @@ section.component#component-map
           "coordinates": [ Number(site.longitude), Number(site.latitude) ]
         },
         "properties": {
+          "id": site.id,
           "name": site.name,
           "address": site.address,
           "url": site.href,
@@ -74,7 +78,19 @@ section.component#component-map
         center: ol.proj.fromLonLat(mapCenter),
         zoom: 17,
       }),
-      interactions: ol.interaction.defaults({mouseWheelZoom:false})
+      interactions: ol.interaction.defaults({mouseWheelZoom:false}),
+    });
+
+    const select = new ol.interaction.Select({
+      condition: ol.events.condition.click
+    });
+    map.addInteraction(select);
+    select.on('select', (e) => {
+      if (e.selected.length) {
+        const selectedMarkerId = e.selected[0].values_.id || null;
+        const correspondingSiteResult = document.getElementById(selectedMarkerId);
+        correspondingSiteResult.classList.toggle('selected');
+      }
     });
 
     /**
